# garagem

./: pyproject.toml
Garagem/: admin.py  models.py  serializers.py  views.py
Garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_acessório_cor_veículo.py
config/: settings.py  urls.py
